--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "boilerplate",
   "main": "index.js",
   "scripts": {
-    "build": "babel src --out-dir dist"
+    "build": "babel src --out-dir dist",
+    "lint": "eslint --ignore-path .gitignore ."
   },
   "author": "Raja Avinash",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5"
+    "@babel/preset-env": "^7.11.5",
+    "eslint": "^7.11.0"
   }
 }
