--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,13 @@
 {
-    "parserOptions": {
-        "ecmaVersion": 2021,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-        }
-    },
-    "extends": ["eslint:recommended"],
-    "env": {
-        "browser": true
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
     }
+  },
+  "extends": ["eslint:recommended", "eslint-config-prettier"],
+  "env": {
+    "browser": true
+  }
 }
