--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "lint": "eslint --ignore-path .gitignore ."
+    "lint": "eslint --ignore-path .gitignore .",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|json)\""
   },
   "author": "Raja Avinash",
   "license": "ISC",
@@ -13,6 +14,8 @@
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
-    "eslint": "^7.11.0"
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "prettier": "^2.1.2"
   }
 }
