--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,12 @@
 {
-    "presets": [
-      [
-        "@babel/env",
-        {
-          "useBuiltIns": "usage",
-          "corejs": "3.6.4"
-        }
-      ]
-    ]
-  }
+  "presets": [
+    [
+      "@babel/env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": "3.6.4"
+      }
+    ],
+    "@babel/preset-typescript"
+  ]
+}
