--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
     "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   }
